--- a/store.html
+++ b/store.html
@@ -11,10 +11,10 @@
 
     </script>
       <!-- ページのタイトル -->
-  <title>ボドゲ部幹部紹介</title>
+  <title>ボドゲ部商店</title>
 
   <!-- ページの説明 -->
-  <meta name="description" content="ボードゲーム愛好会ボドゲ部の幹部紹介ページです。" />
+  <meta name="description" content="ボドゲ部商店です。" />
 
   <!-- 文字エンコードの指定 -->
   <meta charset="utf-8" />
@@ -23,13 +23,13 @@
   <meta name="viewport" content="target-densitydpi=device-dpi, width=950, maximum-scale=1.0, user-scalable=yes">
 
   <!-- ホーム画面に追加したときのタイトル -->
-  <meta name="apple-mobile-web-app-title" content="ボードゲーム愛好会ボドゲ部 幹部紹介">
+  <meta name="apple-mobile-web-app-title" content="ボドゲ部商店">
 
   <!-- ホーム画面に追加したときの画像 -->
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
 
   <!-- サイトアイコンの指定 -->
-  <link rel="icon" type="image/jpg" href="d_nice.png">
+  <link rel="icon" type="image/jpg" href="https://media.discordapp.net/attachments/840252564242956298/930018799506317312/44FFE9AA-539A-4416-813F-70647BFF201D.png">
 
   <!-- 電話番号などをリンクに変換されるのを防ぐ -->
   <meta name="format-detection" content="email=no,telephone=no,address=no" />
