--- a/store.html
+++ b/store.html
@@ -52,7 +52,7 @@
          
          <div class="face-photo">
 
-        <img src="https://media.discordapp.net/attachments/840252564242956298/930043034459066378/82DF8055-F16D-4B6D-8199-DDE65E0AEB7E.gif?width=1740&height=1045" alt="タイトル画像" width="100%" height="auto"class="layer-img"></div>
+        <img src="https://media.discordapp.net/attachments/840252564242956298/930043034459066378/82DF8055-F16D-4B6D-8199-DDE65E0AEB7E.gif?width=1740&height=1045" alt="タイトル画像" width="800px" height="auto"class="layer-img"></div>
          
          <div class="contents-wrapper-inner">
                     <div class="face-photo">
