--- a/storesmallp.html
+++ b/storesmallp.html
@@ -13,7 +13,7 @@
   <title>ボドゲ部商店-部員専用スウェット</title>
 
   <!-- ページの説明 -->
-  <meta name="description" content="部員専用スウェットの言葉選択ページです。" />
+  <meta name="description" content="部員専用スウェットのカラー選択ページです。" />
 
   <!-- 文字エンコードの指定 -->
   <meta charset="utf-8" />
