--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
   <meta name="apple-mobile-web-app-title" content="ボードゲーム愛好会ボドゲ部">
 
   <!-- ホーム画面に追加したときの画像 -->
-  <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://media.discordapp.net/attachments/840252564242956298/917731175307563018/export.png">
 
   <!-- サイトアイコンの指定 -->
   <link rel="icon" type="image/jpg" href="d_nice.png">
