--- a/store.html
+++ b/store.html
@@ -67,6 +67,7 @@
              </br>待望のボドゲ部オリジナル製品が登場！三種類の言葉と47色のカラーバリエーションで、脅威の141種展開。好きな色を見つけてぜひ一着お手元に。
              </br>※suzuriウィンターセール期間中の2022/1/12〜2022/1/19の間に買うと、表示価格から1000円引きになります。新しくsuzuriのアカウントを作る人はさらに500円引きになります。
              </font>
+             </div>
       
   <div class="content-left7">
          <div class="profile7">
