--- a/store.html
+++ b/store.html
@@ -69,7 +69,7 @@
              </font>
              </div>
       
-  <div class="content-left7">
+  <div class="designer-comment">
          <div class="profile7">
              <big><b>デザイナーからのコメント　</b>
             <br/>
