--- a/store.html
+++ b/store.html
@@ -50,7 +50,7 @@
              <img src="https://media.discordapp.net/attachments/840252564242956298/930018799506317312/44FFE9AA-539A-4416-813F-70647BFF201D.png" alt="店主" width="150" height="150"class="min">
              </div>
          
-             <font color="white"><center><b><big>いらっしゃいませー。ボドゲ部のお店です。出目良郎がバイトで働いています。</big></b></center>
+             <font color="white"><center><b>ボドゲ部のお店です。出目良郎がバイトで働いています。</b></center></font>
 
          
          <div class="face-photo2">
