--- a/store.html
+++ b/store.html
@@ -54,10 +54,10 @@
 
          </br></br></br>
          <div class="face-photo2">
-        <div class="min">
+        <p class="min">
         <a href="storesize.html">
         <img src="https://media.discordapp.net/attachments/840252564242956298/930054806368813116/8B525153-D907-410B-913D-78648A352BD6.gif?width=1814&height=702" alt="タイトル画像" width="100%" height="auto">
-        </a>　</div></div>
+        </a>　</p></div>
 
     
          <div class="contents-wrapper-inner">
