--- a/store.html
+++ b/store.html
@@ -54,10 +54,10 @@
 
          </br></br></br>
          <div class="face-photo2">
-        <center>
+       <center>
         <a href="storesize.html">
-        <img src="https://media.discordapp.net/attachments/840252564242956298/930065331463004180/1456FD6F-BE5C-41FC-B280-D31E8B777D4A.gif?width=1814&height=635" alt="タイトル画像" width="100%" height="auto">
-        </a>　</center></div>
+        <img src="https://media.discordapp.net/attachments/840252564242956298/930065331463004180/1456FD6F-BE5C-41FC-B280-D31E8B777D4A.gif?width=1814&height=635" alt="タイトル画像" width="auto" height="auto">
+        </a></center></div>
 
     
          <div class="contents-wrapper-inner">
