--- a/store.html
+++ b/store.html
@@ -56,7 +56,7 @@
          <div class="face-photo2">
        <center>
         <a href="storesize.html">
-        <img src="https://media.discordapp.net/attachments/840252564242956298/930065331463004180/1456FD6F-BE5C-41FC-B280-D31E8B777D4A.gif?width=1814&height=635" alt="タイトル画像" width="auto" height="auto">
+        <img src="https://media.discordapp.net/attachments/840252564242956298/930065331463004180/1456FD6F-BE5C-41FC-B280-D31E8B777D4A.gif?width=1814&height=635" alt="タイトル画像" width="100%" height="auto">
         </a></center></div>
 
     
