--- a/store.html
+++ b/store.html
@@ -53,13 +53,13 @@
              <font color="white"><center><b>ボドゲ部のお店です。出目良郎がバイトで働いています。</b></center></font>
 
          </br></br></br>
-         <div class="face-photo2"><div style="text-align:center;">
-  <span>
+         <div class="face-photo2">
+             <div style="text-align:center;">
+             <span>
         <a href="storesize.html">
         <img src="https://media.discordapp.net/attachments/840252564242956298/930065331463004180/1456FD6F-BE5C-41FC-B280-D31E8B777D4A.gif?width=1814&height=635" alt="タイトル画像" width="100%" height="auto">
-        </a></div>          
-  </span>
-  </div>
+        </a> </span></div>         
+  </div> 
 
     
          <div class="contents-wrapper-inner">
