--- a/store.html
+++ b/store.html
@@ -46,7 +46,7 @@
      <div class="contents-wrapper">
          <a href="home.html" ><font color="white"><b>◀︎ボドゲ部Home</b></font></a>
          <div class="heading"><big><i>　ボドゲ部商店　　</big>
-             </br><small>　　Bodogebu Store</br>ボドゲ部のお店です。</br>出目良郎がバイトで働いています。</small>　　</i>
+             </br><small>　　Bodogebu Store</br>　</small>　　</i>
              <img src="https://media.discordapp.net/attachments/840252564242956298/930018799506317312/44FFE9AA-539A-4416-813F-70647BFF201D.png" alt="店主" width="150" height="150"class="min">
              </div>
          
@@ -54,11 +54,10 @@
 
          </br></br></br>
          <div class="face-photo2">
-             <div style="text-align:center;">
-             <span>
+
         <a href="storesize.html">
-        <img src="https://media.discordapp.net/attachments/840252564242956298/930065331463004180/1456FD6F-BE5C-41FC-B280-D31E8B777D4A.gif?width=1814&height=635" alt="タイトル画像" width="100%" height="auto">
-        </a> </span></div>         
+        <img src="https://media.discordapp.net/attachments/840252564242956298/930065331463004180/1456FD6F-BE5C-41FC-B280-D31E8B777D4A.gif?width=1814&height=635" alt="タイトル画像" width="800px" height="auto">
+        </a></div>         
   </div> 
 
     
