--- a/store.html
+++ b/store.html
@@ -72,7 +72,7 @@
             
       
   <div class="designer-comment">
-         <div class="profile7">
+         <div class="designer-comment-s">
             <small><b>デザイナーからのコメント　</b>
             <br/>
             普段でも着やすいかつ学生感を意識してカレッジデザインにボドゲ部らしさを落とし込みました。たくさんのアイディアや意見を提供してくださった方々に感謝を申し上げます。</small>
