--- a/store.html
+++ b/store.html
@@ -56,7 +56,7 @@
 
    <div class="designer-comment">
 
-      <div class="face-photo2">
+      <div align="center">
              <a href="storesize.html">
              <img src="https://media.discordapp.net/attachments/840252564242956298/930065331463004180/1456FD6F-BE5C-41FC-B280-D31E8B777D4A.gif?width=1814&height=635" alt="タイトル画像" width="800px" height="auto">
              </a>
