--- a/store.html
+++ b/store.html
@@ -45,8 +45,8 @@
     <!-- TODO: Please edit here -->
      <div class="contents-wrapper">
          <a href="home.html" ><font color="white"><b>◀︎ボドゲ部Home</b></font></a>
-         <div class="heading"><big><i>　ボドゲ部商店　</big>
-             </br><small>　Bodogebu Store　</br>　</small>　　　　　　　　　　　　　　　　　　</i>
+         <div class="heading"></br></br></br><big><i>　ボドゲ部商店　</big>
+             </br><small>　Bodogebu Store　</small></i>
              <img src="https://media.discordapp.net/attachments/840252564242956298/930018799506317312/44FFE9AA-539A-4416-813F-70647BFF201D.png" alt="店主" width="150" height="150"class="min">
              </div>
          
