--- a/store.html
+++ b/store.html
@@ -45,10 +45,11 @@
     <!-- TODO: Please edit here -->
      <div class="contents-wrapper">
          <a href="home.html" ><font color="white"><b>◀︎ボドゲ部Home</b></font></a>
-         <div class="heading"><big><i>　ボドゲ部商店　</big>
+         <div class="marketheading"><big><i>　ボドゲ部商店　</big>
              </br><small>　Bodogebu Market　</small></i>
-             <img src="https://media.discordapp.net/attachments/840252564242956298/930018799506317312/44FFE9AA-539A-4416-813F-70647BFF201D.png" alt="店主" width="150" height="150"class="min">
+             <div class=face-photo><img src="https://media.discordapp.net/attachments/840252564242956298/930018799506317312/44FFE9AA-539A-4416-813F-70647BFF201D.png" alt="店主" width="150" height="150"class="min">
              </div>
+         </div>
          
              <font color="white"><center><b>ボドゲ部のお店です。出目良郎がバイトで働いています。</b></center></font>
 
