--- a/store.html
+++ b/store.html
@@ -43,9 +43,9 @@
 </head>
 <body>
     <!-- TODO: Please edit here -->
-     <div class="contents-wrapper">
+<div class="contents-wrapper">
          <a href="home.html" ><font color="white"><b>◀︎ボドゲ部Home</b></font></a>
-         <div class="marketheading"><big><i>　ボドゲ部商店　　</big>
+         <div class="heading"><big><i>　ボドゲ部商店　　</big>
              
              <div class="face-photo"><img src="https://media.discordapp.net/attachments/840252564242956298/930018799506317312/44FFE9AA-539A-4416-813F-70647BFF201D.png" alt="店主" width="150" height="150">
              </div>
@@ -89,7 +89,7 @@
 
 
     </div>
-
+</div>
           <a href="home.html" ><font color="white"><b>◀︎ボドゲ部Home</b></font></a>
 
 </body>
