--- a/storesize.html
+++ b/storesize.html
@@ -61,6 +61,7 @@
       <div align="center">
         <div class="face-photo2">
              <a href="storewordb.html"><img src="https://media.discordapp.net/attachments/840252564242956298/929810521727860837/7BE540EA-99EC-41E2-A382-8AC8BD3FD150.png?width=874&height=1045" alt="BIG" hight="auto" width="450px"></a>　
+             <a href="storewords.html"><img src="https://media.discordapp.net/attachments/840252564242956298/929810521992069160/5A5F0DD6-A2C5-47C5-8920-C634E61D59A3.png?width=874&height=1045" alt="BIG" hight="auto" width="450px"></a>　
              
         </div>
       </div>
