--- a/store.html
+++ b/store.html
@@ -52,9 +52,9 @@
          
            <font color="white"><center><b>ボドゲ部のお店です。出目良郎がバイトで働いています。</b></center></font>
     
-           <div align="right">
-             <div class="face-photo"><img src="https://media.discordapp.net/attachments/840252564242956298/930018799506317312/44FFE9AA-539A-4416-813F-70647BFF201D.png" alt="店主" width="150" height="150">
-             　　　　　　　　　　</div>
+           <div align="center">
+             　　　　　　　　　　　　　　　　　　　　<div class="face-photo"><img src="https://media.discordapp.net/attachments/840252564242956298/930018799506317312/44FFE9AA-539A-4416-813F-70647BFF201D.png" alt="店主" width="150" height="150">
+             </div>
            </div>
 
          </br></br></br></br></br>
