--- a/store.html
+++ b/store.html
@@ -115,7 +115,7 @@
          <div class="content">
 
              <font color="black"><b><big>¥1840〜（送料税込）</big></b>
-             </br><b><i>出目良郎のアパレルグッズが登場！上司に怒られに行くときの下着に、一人落ち込む夜のパジャマに、初めて彼氏彼女が家に遊びに来るときの部屋着に……。様々なシーンであなたをゆるくします。</i></b>
+             </br><b><i>出目良郎のゆるくてシュールなアパレルグッズが登場！上司に怒られに行くときの下着に、一人落ち込む夜のパジャマに、初めて彼氏彼女が家に遊びに来るときの部屋着に……。様々なシーンであなたをゆるくします。</i></b>
              </br><small></small>
              </font></br>
            
@@ -125,7 +125,7 @@
          <div class="designer-comment-s">
             <small><b>デザイナーからのコメント　</b>
             <br/>
-            一番のこだわりポイントは2000円以内に収めたことですが、物好きなブルジョワジーがいたときのために価格が高めの冬物も用意しました。このアイテムが欲しい、というリクエストがあればいつでもご連絡ください。</small>
+            一番のこだわりポイントは最低価格を2000円以内に収めたことですが、物好きなブルジョワジーがいたときのために価格が高めの黒色や冬物も用意しました。このアイテムが欲しい、というリクエストがあればいつでもご連絡ください。</small>
          </div>
          
 
