--- a/store.html
+++ b/store.html
@@ -66,7 +66,7 @@
       
       <div align="center">
        <div class="face-photo2">
-             <a href="storesize.html">
+             <a href="">
              <img src="https://media.discordapp.net/attachments/840252564242956298/930699882958843984/A616A804-E453-46D4-8DDD-5439A09D3A2B.gif?width=1814&height=635" alt="タイトル画像" width="800px" height="auto" class="face-photo2">
              </a>
        </div>
