--- a/store.html
+++ b/store.html
@@ -125,7 +125,7 @@
          <div class="designer-comment-s">
             <small><b>デザイナーからのコメント(開発中)　</b>
             <br/>
-            HPをこだわっていたら肝心の製品の方が12日に間に合いませんでした。創英角ポップ体が商用利用不可なことに気づくのが遅れたのも一因です。ちなみに完成したデザインは母に見せていっているのですが、反応が悪いです。</small>
+            HPをこだわっていたら肝心の製品の方が12日に間に合いませんでした。創英角ポップ体が商用利用不可なことに気づくのが遅れたのも一因か……？ちなみに完成したデザインは母に見せていっているのですが、反応が悪いです。</small>
          </div>
          
 
