--- a/store.html
+++ b/store.html
@@ -78,7 +78,7 @@
 
              <font color="black"><b><big>¥3891〜（送料税込）</big></b>
              </br><b><i>待望のボドゲ部オリジナル製品が登場！三種類の言葉と47色のカラーバリエーションで、脅威の141種展開。好きな色を見つけてぜひ一着お手元に。</i></b>
-             </br><small>※suzuriウィンターセール期間中の2022/1/12〜2022/1/19の間に買うと、表示価格から<font color="red">1000円引き</font>になります。</small>
+             </br><small>※suzuri新春セール期間中の2022/1/12〜2022/1/19の間に買うと、表示価格から<font color="red">1000円引き</font>になります。</small>
              </font></br>
            
          
