--- a/store.html
+++ b/store.html
@@ -21,6 +21,9 @@
 
   <!-- スマホに対応するためのViewPortの設定 -->
   <meta name="viewport" content="target-densitydpi=device-dpi, width=950, maximum-scale=1.0, user-scalable=yes">
+    
+    
+      <meta property="og:image" content="https://media.discordapp.net/attachments/840252564242956298/930018799506317312/44FFE9AA-539A-4416-813F-70647BFF201D.png" />
 
   <!-- ホーム画面に追加したときのタイトル -->
   <meta name="apple-mobile-web-app-title" content="ボドゲ部商店">
