--- a/demeyoshiro.html
+++ b/demeyoshiro.html
@@ -47,7 +47,7 @@
 <body>
     <!-- TODO: Please edit here -->
 <div class="contents-wrapper">
-         <a href="home.html" ><font color="white"><b>◀︎ボドゲ部Home</b></font></a>
+         <a href="store.html" ><font color="white"><b>◀︎ボドゲ部商店へ戻る</b></font></a>
          <div class="heading"><big><i>　ボドゲ部商店　</big>
 
              </br><small>　Bodogebu Market　</small></i>
@@ -139,7 +139,7 @@
 
 
 </div>
-          <a href="home.html" ><font color="white"><b>◀︎ボドゲ部Home</b></font></a>
+          <a href="store.html" ><font color="white"><b>◀︎ボドゲ部商店へ戻る</b></font></a>
 
 </body>
 </html>
