--- a/demeyoshiro.html
+++ b/demeyoshiro.html
@@ -48,9 +48,7 @@
     <!-- TODO: Please edit here -->
 <div class="contents-wrapper">
          <a href="store.html" ><font color="white"><b>◀︎ボドゲ部商店へ戻る</b></font></a>
-         <div class="heading"><big><i>　ボドゲ部商店　</big>
-
-             </br><small>　Bodogebu Market　</small></i>
+         <div class="heading"><big><i>　出目良郎グッズ　</big></i>
          </div>
            </br>
              <div align="center">
