--- a/demeyoshiro.html
+++ b/demeyoshiro.html
@@ -48,7 +48,7 @@
     <!-- TODO: Please edit here -->
 <div class="contents-wrapper">
          <a href="store.html" ><font color="white"><b>◀︎ボドゲ部商店へ戻る</b></font></a>
-         <div class="heading"><big><i>　出目良郎グッズ　</big></i>
+         <div class="heading"><a href="https://bodogebumarket.booth.pm/"  ><big><i>　出目良郎グッズ　</big></i></a>
          </div>
            </br>
              <div align="center">
