--- a/demeyoshiro.html
+++ b/demeyoshiro.html
@@ -48,7 +48,7 @@
     <!-- TODO: Please edit here -->
 <div class="contents-wrapper">
          <a href="store.html" ><font color="white"><b>◀︎ボドゲ部商店へ戻る</b></font></a>
-         <div class="heading"><a href="https://bodogebumarket.booth.pm/" style="text-decoration:none;" ><big><i>　出目良郎グッズ　</big></i></a>
+         <div class="heading"><a href="https://bodogebumarket.booth.pm/" style="text-decoration:none;" ><font color="white"><big><i>　出目良郎グッズ　</i></big></font></a>
          </div>
            </br>
              <div align="center">
@@ -91,7 +91,7 @@
             普段でも着やすいかつ学生感を意識してカレッジデザインにボドゲ部らしさを落とし込みました。質問や希望などあればお気軽に！たくさんのアイディアや意見を提供してくださった方々に感謝を申し上げます。</small>
          </div>
          
-            <div class="deme-photo"><img src="https://media.discordapp.net/attachments/840252564242956298/930701212859400192/FDF0A71F-4682-44BB-8550-CA5019618171.png?width=1046&height=1046" alt="店主" width="150" height="150">
+            <div class="deme-photo"><img src="https://media.discordapp.net/attachments/840252564242956298/917731175307563018/export.png" alt="挿絵2" width="150" height="150">
             </div>
 
 
