--- a/demeyoshiro.html
+++ b/demeyoshiro.html
@@ -48,7 +48,7 @@
     <!-- TODO: Please edit here -->
 <div class="contents-wrapper">
          <a href="store.html" ><font color="white"><b>◀︎ボドゲ部商店へ戻る</b></font></a>
-         <div class="heading"><a href="https://bodogebumarket.booth.pm/" style="text-decoration:none;" ><font color="white"><big><i>　出目良郎グッズ　</i></big></font></a>
+         <div class="heading"><a href="https://bodogebumarket.booth.pm/" style="text-decoration:none;" ><font color="black"><big><i>　出目良郎グッズ　</i></big></font></a>
          </div>
            </br>
              <div align="center">
