--- a/demeyoshiro.html
+++ b/demeyoshiro.html
@@ -66,19 +66,19 @@
       <div align="center">
        <div class="senzaiphoto">
              <a href="storesize.html">
-             <img src="https://media.discordapp.net/attachments/840252564242956298/931472403501031464/46D16951-D41D-47BB-8BEB-09EE210E4C59.png?width=1048&height=1048" alt="商品1" width="auto" height="auto">
-             </a></div><div class="senzaiphoto">
+             <img src="https://media.discordapp.net/attachments/840252564242956298/931472403501031464/46D16951-D41D-47BB-8BEB-09EE210E4C59.png?width=1048&height=1048" alt="商品1" width="20%" height="auto">
+             </a>
            <a href="storesize.html">
-             <img src="https://media.discordapp.net/attachments/840252564242956298/931472403501031464/46D16951-D41D-47BB-8BEB-09EE210E4C59.png?width=1048&height=1048" alt="商品1" width="auto" height="auto">
-             </a></div><div class="senzaiphoto">
+             <img src="https://media.discordapp.net/attachments/840252564242956298/931472403501031464/46D16951-D41D-47BB-8BEB-09EE210E4C59.png?width=1048&height=1048" alt="商品1" width="20%" height="auto">
+             </a>
            <a href="storesize.html">
-             <img src="https://media.discordapp.net/attachments/840252564242956298/931472403501031464/46D16951-D41D-47BB-8BEB-09EE210E4C59.png?width=1048&height=1048" alt="商品1" width="auto" height="auto">
-             </a></div><div class="senzaiphoto">
+             <img src="https://media.discordapp.net/attachments/840252564242956298/931472403501031464/46D16951-D41D-47BB-8BEB-09EE210E4C59.png?width=1048&height=1048" alt="商品1" width="20%" height="auto">
+             </a>
            <a href="storesize.html">
-             <img src="https://media.discordapp.net/attachments/840252564242956298/931472403501031464/46D16951-D41D-47BB-8BEB-09EE210E4C59.png?width=1048&height=1048" alt="商品1" width="auto" height="auto">
-             </a></div><div class="senzaiphoto">
+             <img src="https://media.discordapp.net/attachments/840252564242956298/931472403501031464/46D16951-D41D-47BB-8BEB-09EE210E4C59.png?width=1048&height=1048" alt="商品1" width="20%" height="auto">
+             </a>
            <a href="storesize.html">
-             <img src="https://media.discordapp.net/attachments/840252564242956298/931472403501031464/46D16951-D41D-47BB-8BEB-09EE210E4C59.png?width=1048&height=1048" alt="商品1" width="auto" height="auto">
+             <img src="https://media.discordapp.net/attachments/840252564242956298/931472403501031464/46D16951-D41D-47BB-8BEB-09EE210E4C59.png?width=1048&height=1048" alt="商品1" width="20%" height="auto">
              </a>
        </div>
       </div>
