--- a/demeyoshiro.html
+++ b/demeyoshiro.html
@@ -63,7 +63,7 @@
          </br></br></br></br>
 
  
-      <div align="center">
+
        <div class="senzaiphoto">
              <a href="storesize.html">
              <img src="https://media.discordapp.net/attachments/840252564242956298/931472403501031464/46D16951-D41D-47BB-8BEB-09EE210E4C59.png?width=1048&height=1048" alt="商品1" width="20%" height="auto">
@@ -81,9 +81,9 @@
              <img src="https://media.discordapp.net/attachments/840252564242956298/931472403501031464/46D16951-D41D-47BB-8BEB-09EE210E4C59.png?width=1048&height=1048" alt="商品1" width="20%" height="auto">
              </a>
        </div>
-      </div>
 
-    <div class="contents-wrapper">
+
+    <div class="contents-wrapper-inner">
           
          <div class="content">
 
