--- a/demeyoshiro.html
+++ b/demeyoshiro.html
@@ -62,7 +62,9 @@
 
          </br></br></br></br>
 
- 
+ <div class="float_test">
+
+
 
        <div class="senzaiphoto">
              <a href="storesize.html">
@@ -80,7 +82,7 @@
            <a href="storesize.html">
              <img src="https://media.discordapp.net/attachments/840252564242956298/931472403501031464/46D16951-D41D-47BB-8BEB-09EE210E4C59.png?width=1048&height=1048" alt="商品1" width="100%" height="auto">
              </a></div>
-
+</div>
 
     <div class="contents-wrapper-inner">
           
