--- a/demeyoshiro.html
+++ b/demeyoshiro.html
@@ -64,8 +64,6 @@
 
 
 
-
-
         <div class="senzaiphoto">
              <a href="storesize.html">
              <img src="https://media.discordapp.net/attachments/840252564242956298/931472403501031464/46D16951-D41D-47BB-8BEB-09EE210E4C59.png?width=1048&height=1048" alt="商品1" width="100%" height="auto">
@@ -74,30 +72,32 @@
 
         <div class="senzaiphoto">
            <a href="storesize.html">
-             <img src="https://media.discordapp.net/attachments/840252564242956298/931472403501031464/46D16951-D41D-47BB-8BEB-09EE210E4C59.png?width=1048&height=1048" alt="商品1" width="100%" height="auto">
+             <img src="https://media.discordapp.net/attachments/840252564242956298/931491891407618058/826FBDB4-852C-41EC-A6C5-A26CE3909692.png?width=1048&height=1048" alt="商品2" width="100%" height="auto">
              </a>
         </div>
 
         <div class="senzaiphoto">
            <a href="storesize.html">
-             <img src="https://media.discordapp.net/attachments/840252564242956298/931472403501031464/46D16951-D41D-47BB-8BEB-09EE210E4C59.png?width=1048&height=1048" alt="商品1" width="100%" height="auto">
+             <img src="https://media.discordapp.net/attachments/840252564242956298/931491891726417920/869F1639-09DE-48A0-95B7-DDBC5337367B.png?width=1048&height=1048" alt="商品3" width="100%" height="auto">
              </a>
         </div>
 
         <div class="senzaiphoto">
            <a href="storesize.html">
-             <img src="https://media.discordapp.net/attachments/840252564242956298/931472403501031464/46D16951-D41D-47BB-8BEB-09EE210E4C59.png?width=1048&height=1048" alt="商品1" width="100%" height="auto">
+             <img src="https://media.discordapp.net/attachments/840252564242956298/931491892103880704/C71C2C72-4D4E-4B10-A44A-0410A9C336CB.png?width=1048&height=1048" alt="商品4" width="100%" height="auto">
              </a>
         </div>
 
         <div class="senzaiphoto">
            <a href="storesize.html">
-             <img src="https://media.discordapp.net/attachments/840252564242956298/931472403501031464/46D16951-D41D-47BB-8BEB-09EE210E4C59.png?width=1048&height=1048" alt="商品1" width="100%" height="auto">
+             <img src="https://media.discordapp.net/attachments/840252564242956298/931491892527501322/BD5EC048-F00D-475F-AF02-743EE9372E30.png?width=1048&height=1048" alt="商品5" width="100%" height="auto">
              </a>
         </div>
 
 
-    <div class="contents-wrapper-inner">
+
+
+   <div class="designer-comment">
           
          <div class="content">
 
