--- a/demeyoshiro.html
+++ b/demeyoshiro.html
@@ -96,7 +96,7 @@
         </div>
 
           
-         <div class="content">
+         <div class="content clearbox">
 
              <font color="black"><b><big>¥3891〜（送料税込）</big></b>
              </br><b><i>待望のボドゲ部オリジナル製品が登場！三種類の言葉と47色のカラーバリエーションで、脅威の141種展開。好きな色を見つけてぜひ一着お手元に。</i></b>
@@ -106,7 +106,7 @@
          
          </div>
 
-         <div class="designer-comment-s">
+         <div class="designer-comment-s clearbox">
             <small><b>デザイナーからのコメント　</b>
             <br/>
             普段でも着やすいかつ学生感を意識してカレッジデザインにボドゲ部らしさを落とし込みました。質問や希望などあればお気軽に！たくさんのアイディアや意見を提供してくださった方々に感謝を申し上げます。</small>
