--- a/demeyoshiro.html
+++ b/demeyoshiro.html
@@ -118,10 +118,10 @@
 </div>
 
             
+</br></br></br></br>
 
 
-
-          <a href="store.html" ><font color="white"><b>◀︎ボドゲ部商店へ戻る</b></font></a>
+          <a href="store.html" ><font color="white"><b>◀︎ボドゲ部商店へ戻る</b></font></a></br>
 
 </body>
 </html>
