--- a/demeyoshiro.html
+++ b/demeyoshiro.html
@@ -62,6 +62,14 @@
 
          </br></br></br></br>
 
+      <div align="center">
+       <div class="face-photo2">
+             <a href="https://bodogebumarket.booth.pm/">
+             <img src="https://media.discordapp.net/attachments/840252564242956298/931507767942991932/88A4B8A2-4A30-43C9-9539-B5B62F782E2D.png?width=1182&height=1048" alt="タイトル画像" width="800px" height="auto" class="face-photo2">
+             </a>
+       </div>
+      </div>
+
 
  <div class="designer-comment">
 
