--- a/demeyoshiro.html
+++ b/demeyoshiro.html
@@ -137,7 +137,7 @@
 
 
 </div>
-          <a href="home.html" ><font color="white"><b>◀︎ボドゲ部Home</b></font></a>
+          <a href="store.html" ><font color="white"><b>◀︎ボドゲ部商店へ戻る</b></font></a>
 
 </body>
 </html>
