--- a/demeyoshiro.html
+++ b/demeyoshiro.html
@@ -65,10 +65,16 @@
    <div class="designer-comment">
 
       
-      <div align="center">
+       <div align="center">
+           <div class="goodstitle">1.出目良郎</div>
+               </br>
+           <div class="goodssubtitle">おためし</div>
+       </div>
+          
+       <div align="center">
        <div class="face-photo2">
              <a href="storesize.html">
-             <img src="https://media.discordapp.net/attachments/840252564242956298/931536860948332574/IMG_2088.PNG?width=1942&height=1046" alt="製品1" width="900px" height="auto" class="face-photo2">
+             <img src="https://media.discordapp.net/attachments/840252564242956298/931536860948332574/IMG_2088.PNG?width=1942&height=1046" alt="製品1" width="1000px" height="auto" class="face-photo2">
              </a>
        </div>
       </div>
