--- a/demeyoshiro.html
+++ b/demeyoshiro.html
@@ -74,7 +74,7 @@
        <div align="center">
        <div class="face-photo2">
              <a href="storesize.html">
-             <img src="https://media.discordapp.net/attachments/840252564242956298/931536860948332574/IMG_2088.PNG?width=1942&height=1046" alt="製品1" width="1000px" height="auto" class="face-photo2">
+             <img src="https://media.discordapp.net/attachments/840252564242956298/931551520019849266/60D169A0-ED83-4A5C-B8C6-F7D20509779A.png?width=1998&height=743" alt="製品1" width="1200px" height="auto" class="face-photo2">
              </a>
        </div>
        </div>
