--- a/demeyoshiro.html
+++ b/demeyoshiro.html
@@ -141,7 +141,7 @@
 
 
 </div>
-          <a href="store.html" ><font color="white"><b>◀︎ボドゲ部商店へ戻る</b></font></a>
+          <div class= "clear_box"><a href="store.html" ><font color="white"><b>◀︎ボドゲ部商店へ戻る</b></font></a></div>
 
 </body>
 </html>
