--- a/demeyoshiro.html
+++ b/demeyoshiro.html
@@ -137,6 +137,24 @@
        </div>
    </div>
 
+   <div class="designer-comment">
+      
+       <div align="center">
+           <div class="goodstitle">5.&nbsp;英字ロゴ</div>
+               </br>
+           <div class="goodssubtitle">ハイテンションな英字ロゴシリーズ。</div>
+       </div>
+          
+       <div align="center">
+       <div class="face-photo2">
+             <a href="storesize.html">
+             <img src="https://media.discordapp.net/attachments/840252564242956298/931551712546795580/0D4367FD-AE79-4172-B682-51EB6FDF2B1A.png?width=1998&height=743" alt="製品5英字ロゴ" width="1200px" height="auto" class="face-photo2">
+             </a>
+       </div>
+
+       </div>
+   </div>
+
 
 
 
