--- a/demeyoshiro.html
+++ b/demeyoshiro.html
@@ -52,10 +52,10 @@
          </div>
              </br>
            <div align="center">
-             　　　　　　　　　　　　　　<div class="deme-photo"><img src="https://media.discordapp.net/attachments/840252564242956298/930726734670741534/50B9781B-1FE4-4D53-8ADC-BFBE2FBA9BBD.png" alt="店主" width="150" height="150">
-                    </div>
+               <div class="deme-photo"><img src="https://media.discordapp.net/attachments/840252564242956298/931560287881019483/703CDBCF-EAAB-4998-BF4D-936BADB4EE49.png?width=1130&height=1046" alt="店主" width="150" height="150">
+                   　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　 </div>
            </div>
-         <font color="white"><center><b>boothにて販売中！このページでは全ての柄の半袖Tシャツを紹介していますが、それぞれ長袖バージョンもあります。</b></center></font>
+         <font color="white"><center><b>boothにて販売中！</br>それぞれ長袖もあります。</b></center></font>
     
 
            
