--- a/demeyoshiro.html
+++ b/demeyoshiro.html
@@ -51,9 +51,9 @@
          <div class="heading"><a href="https://bodogebumarket.booth.pm/" style="text-decoration:none;" ><font color="black"><big><i>　出目良郎グッズ　</i></big></font></a>
          </div>
              </br>
-           <div align="center">
+           <div align="left">
                <div class="deme-photo"><img src="https://media.discordapp.net/attachments/840252564242956298/931560287881019483/703CDBCF-EAAB-4998-BF4D-936BADB4EE49.png?width=1130&height=1046" alt="店主" width="150" height="150">
-                   　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　 </div>
+               　　　　　　　　　</div>
            </div>
          <font color="white"><center><b>boothにて販売中！</br>それぞれ長袖もあります。</b></center></font>
     
