--- a/yoshirogoods.html
+++ b/yoshirogoods.html
@@ -52,7 +52,7 @@
          </div>
              </br>
            <div align="left">
-               <div class="deme-photo"><img src="https://media.discordapp.net/attachments/840252564242956298/931560287881019483/703CDBCF-EAAB-4998-BF4D-936BADB4EE49.png?width=1130&height=1046" alt="店主" width="150" height="150">
+               　　　　　　　　　　<div class="deme-photo"><img src="https://media.discordapp.net/attachments/840252564242956298/931560287881019483/703CDBCF-EAAB-4998-BF4D-936BADB4EE49.png?width=1130&height=1046" alt="店主" width="150" height="150">
               </div>
            </div>
          <font color="white"><center><b>boothにて販売中！</br>それぞれ長袖もあります。</b></center></font>
@@ -77,7 +77,7 @@
              <img src="https://media.discordapp.net/attachments/840252564242956298/931551520019849266/60D169A0-ED83-4A5C-B8C6-F7D20509779A.png?width=1998&height=743" alt="製品1出目良郎" width="1200px" height="auto" class="face-photo2">
              </a>
        </div>
-        </font>
+        </div></font>
    </div>
 
             
