--- a/yoshirogoods.html
+++ b/yoshirogoods.html
@@ -269,13 +269,13 @@
 
 
                  </br> </br> </br>
-
+<div class= "designer-comment">
          <div class="designer-comment-s">
             <small><b>デザイナーからのコメント(開発中)　</b>
             <br/>
-            HPをこだわっていたら肝心の製品の方が12日に間に合いませんでした。創英角ポップ体が商用利用不可なことに気づくのが遅れたのも一因か……？ちなみに完成したデザインは母に見せていっているのですが、反応が悪いです。</small>
+            白Tだけなんとか2000円以内に収まりましたが、受注生産だとどうしても高くなっちゃいますね……。送料の発生の仕方が複雑なので、詳しくはこちらをご覧ください。とりあえず白Tとマグは2点以上だと送料固定されてちょっとお得になります。それ以外はたくさん買ったからといって一律にはならない。鬼。</small>
          </div>
-
+</div>
           <div class= "clear_box"><a href="store.html" ><font color="white"><b>◀︎ボドゲ部商店へ戻る</b></font></a></div>
 
                  </br> </br>
