--- a/yoshirogoods.html
+++ b/yoshirogoods.html
@@ -270,6 +270,19 @@
 
                  </br> </br> </br>
 <div class= "designer-comment">
+        <div class="souryou">
+             <b>エコバッグ</br>白T</br>黒T</br>長袖白T</br>マグキャップ</br>クッション</b>
+        </div>
+
+        <div class="souryou">
+             <b>¥1,850</br>¥1,940</br>¥2,650</br>¥2,900</br>¥2,250</br>¥2,600</br>¥4,350</b>
+        </div>
+
+        <div class="souryou">
+             <b>¥1,850</br>¥1,940</br>¥2,650</br>¥2,900</br>¥2,250</br>¥2,600</br>¥4,350</b>
+        </div>
+    
+    
          <div class="designer-comment-s">
             <small><b>デザイナーからのコメント(開発中)　</b>
             <br/>
