--- a/yoshirogoods.html
+++ b/yoshirogoods.html
@@ -270,8 +270,9 @@
 
                  </br> </br> </br>
 <div class= "designer-comment">
+    <div align="center">
         <div class="souryou">
-             <b>エコバッグ</br>白T</br>黒T</br>長袖白T</br>マグキャップ</br>クッション</b>
+             エコバッグ</br>白T</br>黒T</br>長袖白T</br>マグ</br>キャップ</br>クッション
         </div>
 
         <div class="souryou">
@@ -279,10 +280,10 @@
         </div>
 
         <div class="souryou">
-             <b>¥1,850</br>¥1,940</br>¥2,650</br>¥2,900</br>¥2,250</br>¥2,600</br>¥4,350</b>
+             <small>¥1,850</br>¥1,940</br>¥2,650</br>¥2,900</br>¥2,250</br>¥2,600</br>¥4,350</small>
         </div>
     
-    
+    </div>
          <div class="designer-comment-s">
             <small><b>デザイナーからのコメント(開発中)　</b>
             <br/>
