--- a/yoshirogoods.html
+++ b/yoshirogoods.html
@@ -269,7 +269,7 @@
 
 
                  </br> </br> </br>
-<div class= "designer-comment">
+<div class= "shippinglist">
     <div align="center">
         <div class="souryou">
              エコバッグ</br>白T</br>黒T</br>長袖白T</br>マグ</br>キャップ</br>クッション
@@ -280,11 +280,11 @@
         </div>
 
         <div class="souryou">
-             <small>¥1,850</br>¥1,940</br>¥2,650</br>¥2,900</br>¥2,250</br>¥2,600</br>¥4,350</small>
+             <small>（¥1300＋送料¥550）</br>¥1,940</br>¥2,650</br>¥2,900</br>¥2,250</br>¥2,600</br>¥4,350</small>
         </div>
     
     </div>
-         <div class="designer-comment-s">
+         <div class="designer-comment-s clear_box">
             <small><b>デザイナーからのコメント(開発中)　</b>
             <br/>
             白Tだけなんとか2000円以内に収まりましたが、受注生産だとどうしても高くなっちゃいますね……。送料の発生の仕方が複雑なので、詳しくはこちらをご覧ください。とりあえず白Tとマグは2点以上だと送料固定されてちょっとお得になります。それ以外はたくさん買ったからといって一律にはならない。鬼。</small>
