--- a/yoshirogoods.html
+++ b/yoshirogoods.html
@@ -280,7 +280,7 @@
         </div>
 
         <div class="souryou">
-             <small>（¥1300＋送料¥550）</br>¥1,940</br>¥2,650</br>¥2,900</br>¥2,250</br>¥2,600</br>¥4,350</small>
+             <small>（1300＋送料550）</br>（1,600＋送料340）</br>（2,100＋送料550）</br>（2,350＋送料550）</br>（1,480＋送料770）</br>（2,050＋送料550）</br>（3,800＋送料550）</small>
         </div>
     
     </div>
