--- a/yoshirogoods.html
+++ b/yoshirogoods.html
@@ -270,7 +270,8 @@
 
                  </br> </br> </br>
 <div class= "shippinglist">
-    <div align="center">
+    <center><big><b>お値段早見表（安い順、一点購入の場合）</b></big></br>
+    
         <div class="souryou">
              エコバッグ</br>白T</br>黒T</br>長袖白T</br>マグ</br>キャップ</br>クッション
         </div>
@@ -282,7 +283,7 @@
         <div class="souryou">
              <small>（1300＋送料550）</br>（1,600＋送料340）</br>（2,100＋送料550）</br>（2,350＋送料550）</br>（1,480＋送料770）</br>（2,050＋送料550）</br>（3,800＋送料550）</small>
         </div>
-    
+    </center>
     </div>
          <div class="designer-comment-s clear_box">
             <small><b>デザイナーからのコメント(開発中)　</b>
