--- a/yoshirogoods.html
+++ b/yoshirogoods.html
@@ -270,8 +270,13 @@
 
                  </br> </br> </br>
 <div class= "shippinglist">
+    </br>
     <center><big><b>お値段早見表（安い順、一点購入の場合）</b></big></br>
     
+        <div class="souryou">
+            　　 　　　　</br>　　　　　　
+        </div>
+
         <div class="souryou">
              エコバッグ</br>白T</br>黒T</br>長袖白T</br>マグ</br>キャップ</br>クッション
         </div>
@@ -286,9 +291,8 @@
     </center>
 
          <div class="designer-comment-s clear_box">
-            <small><b>デザイナーからのコメント(開発中)　</b>
             <br/>
-            白Tだけなんとか2000円以内に収まりましたが、受注生産だとどうしても高くなっちゃいますね……。送料の発生の仕方が複雑なので、詳しくはこちらをご覧ください。とりあえず白Tとマグは2点以上だと送料固定されてちょっとお得になります。それ以外はたくさん買ったからといって一律にはならない。鬼。</small>
+            白Tだけなんとか送料税込2000円以内に収められました。それ以外は富豪向け。送料の発生の仕方が複雑なので、詳しくは<a href=https://factory.pixiv.help/hc/ja/articles/115000182314>こちら</a>をご覧ください。</br>とりあえず白Tとマグは2点以上だと送料固定されてちょっとお得になります。それ以外はたくさん買ったからといって一律にはならない。鬼。</small>
          </div>
 </div>
           <div class= "clear_box"><a href="store.html" ><font color="white"><b>◀︎ボドゲ部商店へ戻る</b></font></a></div>
