--- a/yoshirogoods.html
+++ b/yoshirogoods.html
@@ -271,11 +271,8 @@
                  </br> </br> </br>
 <div class= "shippinglist">
     </br>
-    <center><big><b>お値段早見表（安い順、一点購入の場合）</b></big></br>
+    <center><big><big><b>お値段早見表（安い順、一点購入の場合）</b></big></big></br>
     
-        <div class="souryou">
-            　　 　　　　</br>　　　　　　
-        </div>
 
         <div class="souryou">
              エコバッグ</br>白T</br>黒T</br>長袖白T</br>マグ</br>キャップ</br>クッション
