--- a/yoshirogoods.html
+++ b/yoshirogoods.html
@@ -283,13 +283,13 @@
         </div>
 
         <div class="souryou">
-             <small>（1300＋送料550）</br>（1,600＋送料340）</br>（2,100＋送料550）</br>（2,350＋送料550）</br>（1,480＋送料770）</br>（2,050＋送料550）</br>（3,800＋送料550）</small>
+             <small>（1,300＋送料550）</br>（1,600＋送料340）</br>（2,100＋送料550）</br>（2,350＋送料550）</br>（1,480＋送料770）</br>（2,050＋送料550）</br>（3,800＋送料550）</small>
         </div>
     </center>
 
          <div class="designer-comment-s clear_box">
             <br/>
-            白Tだけなんとか送料税込2000円以内に収められました。それ以外は富豪向け。送料の発生の仕方が複雑なので、詳しくは<a href=https://factory.pixiv.help/hc/ja/articles/115000182314>こちら</a>をご覧ください。</br>とりあえず白Tとマグは2点以上だと送料固定されてちょっとお得になります。それ以外はたくさん買ったからといって一律にはならない。鬼。</small>
+            白Tだけなんとか送料税込2000円以内に収められました。それ以外は富豪向け。送料の発生の仕方が複雑なので、詳しくは<a href=https://factory.pixiv.help/hc/ja/articles/115000182314>こちら</a>をご覧ください。とりあえず白Tとマグは2点以上だと送料固定されてちょっとお得になります。それ以外はたくさん買ったからといって一律にはならない。</small>
          </div>
 </div>
           <div class= "clear_box"><a href="store.html" ><font color="white"><b>◀︎ボドゲ部商店へ戻る</b></font></a></div>
