--- a/yoshirogoods.html
+++ b/yoshirogoods.html
@@ -271,7 +271,8 @@
                  </br> </br> </br>
 <div class= "shippinglist">
     </br>
-    <center><big><big><b>お値段早見表（安い順、一点購入の場合）</b></big></big></br>
+    <center><div class="goodstitle">お値段早見表</div></br>
+            <div class="goodssubtitle">（安い順、一点購入の場合）</div></br>
     
 
         <div class="souryou">
