--- a/yoshirogoods.html
+++ b/yoshirogoods.html
@@ -275,17 +275,14 @@
             <div class="goodssubtitle">（安い順、一点購入の場合）</div></br>
     
 
-        <div class="souryou">
+        <div class="souryou0">
              エコバッグ</br>白T</br>黒T</br>長袖白T</br>マグ</br>キャップ</br>クッション
         </div>
 
         <div class="souryou">
-             <b>¥1,850</br>¥1,940</br>¥2,650</br>¥2,900</br>¥2,250</br>¥2,600</br>¥4,350</b>
+             <b>¥1,850　（1,300＋送料550）</br>¥1,940　（1,600＋送料340）</br>¥2,650　（2,100＋送料550）</br>¥2,900　（2,350＋送料550）</br>¥2,250　（1,480＋送料770）</br>¥2,600　（2,050＋送料550）</br>¥4,350　（3,800＋送料550）</b>
         </div>
 
-        <div class="souryou">
-             <small>（1,300＋送料550）</br>（1,600＋送料340）</br>（2,100＋送料550）</br>（2,350＋送料550）</br>（1,480＋送料770）</br>（2,050＋送料550）</br>（3,800＋送料550）</small>
-        </div>
     </center>
 
          <div class="designer-comment-s clear_box">
