--- a/yoshirogoods.html
+++ b/yoshirogoods.html
@@ -276,11 +276,11 @@
     
 
         <div class="souryou0">
-             エコバッグ</br>白T</br>黒T</br>長袖白T</br>マグ</br>キャップ</br>クッション
+             エコバッグ</br>白T</br>マグ</br>キャップ帽</br>黒T</br>白T（長袖）</br>クッション
         </div>
 
         <div class="souryou">
-             <b>¥1,850　（1,300＋送料550）</br>¥1,940　（1,600＋送料340）</br>¥2,650　（2,100＋送料550）</br>¥2,900　（2,350＋送料550）</br>¥2,250　（1,480＋送料770）</br>¥2,600　（2,050＋送料550）</br>¥4,350　（3,800＋送料550）</b>
+             <b>¥1,850　（1,300＋送料550）</br>¥1,940　（1,600＋送料340）</br>¥2,250　（1,480＋送料770）</br>¥2,600　（2,050＋送料550）</br>¥2,650　（2,100＋送料550）</br>¥2,900　（2,350＋送料550）</br>¥4,350　（3,800＋送料550）</b>
         </div>
 
     </center>
