--- a/yoshirogoods.html
+++ b/yoshirogoods.html
@@ -276,13 +276,13 @@
     
 
         <div class="souryou0">
-             <span>エコバッグ</span>¥1,850　（1,300＋送料550）</br>
-             <span>白T</span>¥1,940　（1,600＋送料340）</br>
-             <span>マグ</span>¥2,250　（1,480＋送料770）</br>
-             <span>キャップ帽</span>¥2,600　（2,050＋送料550）</br>
-             <span>黒T</span>¥2,650　（2,100＋送料550）</br>
-             <span>白T（長袖）</span>¥2,900　（2,350＋送料550）</br>
-             <span>クッション</span>¥4,350　（3,800＋送料550）
+             <span class=souryou>エコバッグ</span>¥1,850　（1,300＋送料550）</br>
+             <span class=souryou>白T</span>¥1,940　（1,600＋送料340）</br>
+             <span class=souryou>マグ</span>¥2,250　（1,480＋送料770）</br>
+             <span class=souryou>キャップ帽</span>¥2,600　（2,050＋送料550）</br>
+             <span class=souryou>黒T</span>¥2,650　（2,100＋送料550）</br>
+             <span class=souryou>白T（長袖）</span>¥2,900　（2,350＋送料550）</br>
+             <span class=souryou>クッション</span>¥4,350　（3,800＋送料550）
 
         </div>
 
