--- a/yoshirogoods.html
+++ b/yoshirogoods.html
@@ -271,8 +271,9 @@
                  </br> </br> </br>
 <div class= "shippinglist">
     </br>
-    <center><div class="goodstitle">お値段早見表</div></br>
-            <div class="goodssubtitle">（安い順、一点購入の場合）</div></br>
+    <div class="goodstitle">お値段早見表</div></br>
+            <div class="goodssubtitle">（安い順、一点購入の場合）
+            </div></br>
     
 
         <div class="souryou0">
@@ -283,14 +284,13 @@
              <span class=souryou>黒T</span>¥2,650　（2,100＋送料550）</br>
              <span class=souryou>白T（長袖）</span>¥2,900　（2,350＋送料550）</br>
              <span class=souryou>クッション</span>¥4,350　（3,800＋送料550）
-
         </div>
 
-    </center>
 
          <div class="designer-comment-s clear_box">
             白Tだけなんとか送料税込2000円以内に収められました。それ以外は富豪向け。送料の発生の仕方が複雑なので、詳しくは<a href=https://factory.pixiv.help/hc/ja/articles/115000182314>こちら</a>をご覧ください。とりあえず白Tとマグは2点以上だと送料固定されてちょっとお得になります。それ以外はたくさん買ったからといって一律にはならないので注意。</small>
          </div>
+    </div>
 </div>
           <div class= "clear_box"><a href="store.html" ><font color="white"><b>◀︎ボドゲ部商店へ戻る</b></font></a></div>
 
