--- a/yoshirogoods.html
+++ b/yoshirogoods.html
@@ -277,13 +277,13 @@
     
 
         <div class="souryou0">
-             <span class=souryou>エコバッグ</span><small>¥1,850　（1,300＋送料550）</small></br>
-             <span class=souryou>白T</span><small>¥1,940　（1,600＋送料340）</small></br>
-             <span class=souryou>マグ</span><small>¥2,250　（1,480＋送料770）</small></br>
-             <span class=souryou>キャップ帽</span><small>¥2,600　（2,050＋送料550）</small></br>
-             <span class=souryou>黒T</span><small>¥2,650　（2,100＋送料550）</small></br>
-             <span class=souryou>白T（長袖）</span><small>¥2,900　（2,350＋送料550）</small></br>
-             <span class=souryou>クッション</span><small>¥4,350　（3,800＋送料550）</small>
+             <span class=souryou>エコバッグ</span>¥1,850　<small>（1,300＋送料550）</small></br>
+             <span class=souryou>白T</span>¥1,940　<small>（1,600＋送料340）</small></br>
+             <span class=souryou>マグ</span>¥2,250　<small>（1,480＋送料770）</small></br>
+             <span class=souryou>キャップ帽</span>¥2,600　<small>（2,050＋送料550）</small></br>
+             <span class=souryou>黒T</span>¥2,650　<small>（2,100＋送料550）</small></br>
+             <span class=souryou>白T（長袖）</span>¥2,900　<small>（2,350＋送料550）</small></br>
+             <span class=souryou>クッション</span>¥4,350　<small>（3,800＋送料550）</small>
         </div>
 
 
