--- a/yoshirogoods.html
+++ b/yoshirogoods.html
@@ -272,7 +272,7 @@
 <div class= "shippinglist">
     </br>
     <div class="goodstitle">お値段早見表</div></br>
-            <div class="goodssubtitle">（安い順、一点購入の場合）
+            <center><div class="goodssubtitle">（安い順、一点購入の場合）
             </div></br>
     
 
@@ -285,7 +285,7 @@
              <span class=souryou>白T（長袖）</span>¥2,900　<small>（2,350＋送料550）</small></br>
              <span class=souryou>クッション</span>¥4,350　<small>（3,800＋送料550）</small>
         </div>
-
+            </center>
 
          <div class="designer-comment-s clear_box">
             白Tだけなんとか送料税込2000円以内に収められました。それ以外は富豪（かつ良郎オタク）向けの値段になってしまいました。送料の発生の仕方が複雑なので、詳しくは<a href=https://factory.pixiv.help/hc/ja/articles/115000182314>こちら</a>をご覧ください。とりあえず白Tとマグは2点以上だと送料固定されてちょっとお得になります。それ以外はたくさん買ったからといって一律にはならないので注意。</small>
