--- a/yoshirogoods.html
+++ b/yoshirogoods.html
@@ -271,8 +271,9 @@
                  </br> </br> </br>
 <div class= "shippinglist">
     </br>
-    <div class="goodstitle">お値段早見表</div></br>
-            <center><div class="goodssubtitle">（安い順、一点購入の場合）
+    <center><div class="goodstitle">お値段早見表
+            </div></br>
+            <div class="goodssubtitle">（安い順、一点購入の場合）
             </div></br>
     
 
