--- a/yoshirogoods.html
+++ b/yoshirogoods.html
@@ -289,7 +289,7 @@
             </center>
 
          <div class="designer-comment-s clear_box">
-            白Tだけなんとか送料税込2000円以内に収められました。それ以外は富豪（かつ良郎オタク）向けの値段になってしまいました。送料の発生の仕方が複雑なので、詳しくは<a href=https://factory.pixiv.help/hc/ja/articles/115000182314>こちら</a>をご覧ください。とりあえず白Tとマグは2点以上だと送料固定されてちょっとお得になります。それ以外はたくさん買ったからといって送料一律にはならないので注意。</small>
+            白Tだけなんとか送料税込2000円以内に納められたのですが、それ以外は富豪（かつ良郎オタク）向けの値段になってしまいました。送料の発生の仕方が複雑なので、詳しくは<a href=https://factory.pixiv.help/hc/ja/articles/115000182314>こちら</a>をご覧ください。とりあえず白Tとマグは2点以上だと送料固定されてちょっとお得になります。それ以外はたくさん買ったからといって送料一律にはならないので注意。</small>
          </div>
     </div>
 </div>
