--- a/store.html
+++ b/store.html
@@ -126,9 +126,9 @@
          </div>
 
          <div class="designer-comment-s">
-            <small><b>デザイナーからのコメント(開発中)　</b>
+            <small><b>デザイナーからのコメント</b>
             <br/>
-            HPをこだわっていたら肝心の製品の方が12日に間に合いませんでした。創英角ポップ体が商用利用不可なことに気づくのが遅れたのも一因か……？ちなみに完成したデザインは母に見せていっているのですが、反応が悪いです。</small>
+            どういうやつが需要あるのか全くわからないまま、いろんな方向性のやつを作りました。このアイテムが欲しい、というリクエストがあればすぐ足せるのでいつでもご連絡ください。</small>
          </div>
          
 
