--- a/yoshirogoods.html
+++ b/yoshirogoods.html
@@ -295,6 +295,8 @@
 </div>
           <div class= "clear_box"><a href="store.html" ><font color="white"><b>◀︎ボドゲ部商店へ戻る</b></font></a></div>
 
-                 </br> </br>
+          </br> </br>
+<a href="https://store.line.me/stickershop/product/17669666/ja"><img src="https://media.discordapp.net/attachments/840252564242956298/920263044901244968/C9BA22E3-C991-47B4-B4CC-D0ECA4035B04_4_5005_c.jpeg" alt="LINEスタンプ広告" width="370" height="60"></a>
+          </br> </br>
 </body>
 </html>
