--- a/yoshirogoods.html
+++ b/yoshirogoods.html
@@ -294,7 +294,10 @@
     </div>
 </div>
 </br>
-<center><a href="https://store.line.me/stickershop/product/17669666/ja"><img src="https://media.discordapp.net/attachments/840252564242956298/920263044901244968/C9BA22E3-C991-47B4-B4CC-D0ECA4035B04_4_5005_c.jpeg" alt="LINEスタンプ広告" width="370" height="60"></a></center>
+<center><a href="https://store.line.me/stickershop/product/17669666/ja"><img src="https://media.discordapp.net/attachments/840252564242956298/920263044901244968/C9BA22E3-C991-47B4-B4CC-D0ECA4035B04_4_5005_c.jpeg" alt="LINEスタンプ広告" width="100%" height="auto"></a>
+<img src="https://media.discordapp.net/attachments/840252564242956298/931631704223916102/export_36.png" alt="LINEスタンプアイコン" width="150" height="auto">
+ 
+</center>
           </br> </br>
 
 
