--- a/yoshirogoods.html
+++ b/yoshirogoods.html
@@ -289,12 +289,12 @@
             </center>
 
          <div class="designer-comment-s clear_box">
-            白Tだけなんとか送料税込2000円以内に納められたのですが、それ以外は富豪（かつ良郎オタク）向けの値段になってしまいました。。送料の発生の仕方が複雑なので、詳しくは<a href=https://factory.pixiv.help/hc/ja/articles/115000182314>こちら</a>をご覧ください。とりあえず白Tとマグは2点以上だと送料固定されてちょっとお得になります。それ以外はたくさん買ったからといって送料一律にはならないので注意。</small>
+            送料の発生の仕方が複雑なので、詳しくは<a href=https://factory.pixiv.help/hc/ja/articles/115000182314>こちら</a>をご覧ください。とりあえず白Tとマグは2点以上だと送料固定されてちょっとお得になります。それ以外はたくさん買ったからといって送料一律にはならないので注意。</small>
          </div>
     </div>
 </div>
 </br>
-<center><a href="https://store.line.me/stickershop/product/17669666/ja"><img src="https://media.discordapp.net/attachments/840252564242956298/920263044901244968/C9BA22E3-C991-47B4-B4CC-D0ECA4035B04_4_5005_c.jpeg" alt="LINEスタンプ広告" width="60%" height="auto"></a>
+<center><a href="https://store.line.me/stickershop/product/17669666/ja"><img src="https://media.discordapp.net/attachments/840252564242956298/920263044901244968/C9BA22E3-C991-47B4-B4CC-D0ECA4035B04_4_5005_c.jpeg" alt="LINEスタンプ広告" width="40%" height="auto"></a>
 <img src="https://media.discordapp.net/attachments/840252564242956298/931631704223916102/export_36.png" alt="LINEスタンプアイコン" width="150" height="auto">
  
 </center>
