--- a/store.html
+++ b/store.html
@@ -23,7 +23,7 @@
   <meta name="viewport" content="target-densitydpi=device-dpi, width=950, maximum-scale=1.0, user-scalable=yes">
     
     
-      <meta property="og:image" content="https://media.discordapp.net/attachments/840252564242956298/930726734670741534/50B9781B-1FE4-4D53-8ADC-BFBE2FBA9BBD.png" />
+      <meta property="og:image" content="bmarket.jpg" />
 
   <!-- ホーム画面に追加したときのタイトル -->
   <meta name="apple-mobile-web-app-title" content="ボドゲ部商店">
@@ -32,7 +32,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
 
   <!-- サイトアイコンの指定 -->
-  <link rel="icon" type="image/jpg" href="https://media.discordapp.net/attachments/840252564242956298/930726734670741534/50B9781B-1FE4-4D53-8ADC-BFBE2FBA9BBD.png">
+  <link rel="icon" type="image/jpg" href="bmarket.jpg">
 
   <!-- 電話番号などをリンクに変換されるのを防ぐ -->
   <meta name="format-detection" content="email=no,telephone=no,address=no" />
