--- a/storesize.html
+++ b/storesize.html
@@ -24,12 +24,14 @@
 
   <!-- ホーム画面に追加したときのタイトル -->
   <meta name="apple-mobile-web-app-title" content="ボドゲ部商店-部員専用スウェット">
+    
+     <meta property="og:image" content="bmarket.jpg">
 
   <!-- ホーム画面に追加したときの画像 -->
-  <link rel="apple-touch-icon" sizes="180x180" href="https://media.discordapp.net/attachments/840252564242956298/930018799506317312/44FFE9AA-539A-4416-813F-70647BFF201D.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="bmarket.jpg">
 
   <!-- サイトアイコンの指定 -->
-  <link rel="icon" type="image/jpg" href="https://media.discordapp.net/attachments/840252564242956298/930018799506317312/44FFE9AA-539A-4416-813F-70647BFF201D.png">
+  <link rel="icon" type="image/jpg" href="bmarket.jpg">
 
   <!-- 電話番号などをリンクに変換されるのを防ぐ -->
   <meta name="format-detection" content="email=no,telephone=no,address=no" />
