--- a/storesize.html
+++ b/storesize.html
@@ -28,7 +28,7 @@
      <meta property="og:image" content="bmarket.jpg">
 
   <!-- ホーム画面に追加したときの画像 -->
-  <link rel="apple-touch-icon" sizes="180x180" href="bmarket.jpg">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://bodoge-bu.github.io/github.io/bmarket.jpg">
 
   <!-- サイトアイコンの指定 -->
   <link rel="icon" type="image/jpg" href="bmarket.jpg">
