--- a/yoshirogoods.html
+++ b/yoshirogoods.html
@@ -29,7 +29,7 @@
   <meta name="apple-mobile-web-app-title" content="ボドゲ部商店">
 
   <!-- ホーム画面に追加したときの画像 -->
-  <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://bodoge-bu.github.io/github.io/bmarket.jpg">
 
   <!-- サイトアイコンの指定 -->
   <link rel="icon" type="image/jpg" href="bmarket.jpg">
